--- a/client/src/sass/components/_slider.scss
+++ b/client/src/sass/components/_slider.scss
@@ -4,32 +4,32 @@
 
 .slider {
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 10px;
     border-radius: 5px;
     background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+    // opacity: 0.7;
+    // -webkit-transition: .2s;
+    // transition: opacity .2s;
     
-    &:hover {
-        opacity: 1;
-    }
-
+    // &:hover {
+    //     opacity: 1;
+    // }
+ 
     &::-webkit-slider-thumb {
         -webkit-appearance: none;
         appearance: none;
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background: #2F735A;
         cursor: pointer;
     }
 
     &::-moz-range-thumb {
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background: #2F735A;
         cursor: pointer;
